objects/Cash_Flow_Details__c.object
<CustomObject>
    <fields>
        <fullName>ABC_out_Termination_Value__c</fullName>
        <label>ABC out Termination Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Flow Details</relationshipLabel>
        <relationshipName>Cash_Flow_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AnnualNetIncentive__c</fullName>
        <label>AnnualNetIncentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualRECTaxSavings__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AnnualRECTaxSavings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualRECValue__c</fullName>
        <label>AnnualRECValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Incentive_value__c</fullName>
        <label>Annual Incentive value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Quote_ID__c</fullName>
        <formula>Quote__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_bill_offset_percentage__c</fullName>
        <formula>(1 -  ( annualBillAfter__c / annualBillBefore__c ))  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electric bill offset percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_Sales_Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Payment Sales Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease  Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Termination_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lease Termination Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Lease_Payment__c</fullName>
        <formula>(Lease_Payment__c /12) - 7.50</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Lease Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <label>Monthly Payment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PBI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Incentives__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Production Incentives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Cash Flow Details</relationshipLabel>
        <relationshipName>Cash_Flow_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solar_Benefits1__c</fullName>
        <description>annualBillSavings__c + AnnualNetIncentive__c + AnnualRECValue__c - AnnualRECTaxSavings__c
 ABS(AnnualRECTaxSavings__c)</description>
        <formula>annualBillSavings__c + AnnualNetIncentive__c + AnnualRECValue__c -  ABS(AnnualRECTaxSavings__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Benefits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Benefits__c</fullName>
        <formula>annualBillSavings__c +  AnnualNetIncentive__c +  AnnualRECValue__c  -  AnnualRECTaxSavings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Benefits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Loan_Payment__c</fullName>
        <label>Solar Loan Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>annualBillAfter__c</fullName>
        <label>annualBillAfter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>annualBillBefore__c</fullName>
        <label>annualBillBefore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>annualBillSavings__c</fullName>
        <label>AnnualBillSavings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>annual_incentive_value_num__c</fullName>
        <description>Convert the Annual Incentive value  to Number for PBI Sum roll-up on Quote</description>
        <formula>Value(Annual_Incentive_value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>annual incentive value num</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>Cash Flow Details</label>
    <nameField>
        <label>Cash Flow Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Flow Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>